--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm install && npm run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deployDev":"npm run build dev"
+    "dev": "react-scripts start"
   },
   "eslintConfig": {
     "extends": "react-app"
