--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "start": "npm install && npm run build && npm run dev",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-    
+    "eject": "react-scripts eject",
+    "dev":"react-scripts start"
+
     
   },
   "eslintConfig": {
